--- a/index.html
+++ b/index.html
@@ -87,7 +87,6 @@
                     <h4> Cheapest and fastest fee per byte</h4>
                     <h3><span id="fastest-avg-fee-fiat" class="label label-success">---</span></h3>
                     <h4> Cost for a median tx size of 226 bytes</h4>
-                    <h5><a target="_blank" href="https://bitcoinfees.21.co/"> see details here</a>
                 </div>
             </div>
             <div class="col-sm-4">
@@ -145,8 +144,8 @@
                         <a target="_blank" href="https://blockchain.info/q">
                             <p style="font-size:13px">Blockchain Explorer API</p>
                         </a>
-                        <a target="_blank" href="https://bitcoinfees.21.co/api">
-                            <p style="font-size:13px">Bitcoinfees.21</p>
+                        <a target="_blank" href="https://bch-insight.bitpay.com/api/utils/estimatefee">
+                            <p style="font-size:13px">Bitpay Insight</p>
                         </a>
                     </div>
 
