change to bitpay insight estimated fee

--- a/index.html
+++ b/index.html
@@ -91,12 +91,18 @@
             </div>
             <div class="col-sm-4">
                 <div class="panel label-success transparent fixed-container">
+                    <div class="panel-body">
+                        <h3> Unconfirmed transactions</h3>
+                        <h4> TODO</h4>
+                    </div>
+                    <!-- TODO
                     <h1><span id="tx-count" class="label label-success">---</span></h1>
                     <div class="panel-body">
                         <h3> Unconfirmed transactions </h3>
                     </div>
                     <h5><a target="_blank" href="https://blockchain.info/unconfirmed-transactions"> see details here</a>
                         <h5>
+                    -->
                 </div>
             </div>
         </div>
