change reddit contact details

--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
 
                     <div class="col-sm" style="padding: 0 0 0 0px">
                         <h2 id='footer-header'>Contact</h2>
-                        <p style="font-size:13px"> You can find me on reddit <a target="_blank" href="https://www.reddit.com/u/roller-coaster-guy">/u/roller-coaster-guy</a></p>
+                        <p style="font-size:13px"> You can find me on reddit <a target="_blank" href="https://www.reddit.com/u/OlavOlsm">/u/roller-coaster-guy</a></p>
                     </div>
 
                 </div>
