modify unconfirmed tx message

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                 <div class="panel label-success transparent fixed-container">
                     <div class="panel-body">
                         <h3> Unconfirmed transactions</h3>
-                        <h4> TODO</h4>
+                        <h4 style="color: green"> Will be confirmed in the next block</h4>
                     </div>
                     <!-- TODO
                     <h1><span id="tx-count" class="label label-success">---</span></h1>
