specify that donation address can be bitcoin cash or bitcoin

--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                         <h2 id='footer-header'>Donation</h2>
                         <div style="font-size:13px" class="blockchain-btn" data-address="1CN4ug4rSBCiP6RaG67U7Wqfiyhhhysszn" data-shared="false">
                             <div class="blockchain stage-ready">
-                                <p style="font-size:13px">You can also help the hodler coaster guy reach the moon: <b>1CN4ug4rSBCiP6RaG67U7Wqfiyhhhysszn</b></p>
+                                <p style="font-size:13px">You can also help the hodler coaster guy reach the moon (Bitcoin Cash or Bitcoin): <b>1CN4ug4rSBCiP6RaG67U7Wqfiyhhhysszn</b></p>
                                 <p class="qr-code"> <img style="height: 100px" src="https://blockchain.info/qr?data=1CN4ug4rSBCiP6RaG67U7Wqfiyhhhysszn&size=125" />
                                 </p>
                             </div>
