--- a/index.html
+++ b/index.html
@@ -154,8 +154,8 @@
 
                     <div class="col-sm" style="padding: 0 0 0 0px">
                         <h2 id='footer-header'> Github </h2>
-                        <a class="github-button" target="_blank" href="https://github.com/rollercoasterguy/rollercoasterguy.github.io" data-icon="octicon-star" data-style="mega" data-count-href="/rollercoasterguy/rollercoasterguy.github.io/stargazers" data-count-api="/repos/rollercoasterguy/rollercoasterguy.github.io#stargazers_count"
-                            data-count-aria-label="# stargazers on GitHub" aria-label="Star rollercoasterguy/rollercoasterguy.github.io on GitHub"> View on Github</a>
+                        <a class="github-button" target="_blank" href="https://github.com/ImmortalTools/bitcoinrollercoasterguy.github.io" data-icon="octicon-star" data-style="mega" data-count-href="/rollercoasterguy/rollercoasterguy.github.io/stargazers" data-count-api="/repos/rollercoasterguy/rollercoasterguy.github.io#stargazers_count"
+                            data-count-aria-label="# stargazers on GitHub" aria-label="Star ImmortalTools/bitcoinrollercoasterguy.github.io on GitHub"> View on Github</a>
                     </div>
 
 
@@ -175,7 +175,7 @@
 
                     <div class="col-sm" style="padding: 0 0 0 0px">
                         <h2 id='footer-header'>Contact</h2>
-                        <p style="font-size:13px"> You can find me on reddit <a target="_blank" href="https://www.reddit.com/u/OlavOlsm">/u/roller-coaster-guy</a></p>
+                        <p style="font-size:13px"> You can find me on reddit <a target="_blank" href="https://www.reddit.com/u/rollercoaster-guy/">/u/rollercoaster-guy/</a></p>
                     </div>
 
                 </div>
