--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta property="og:url" content="https://rollercoasterguy.github.io" />
-    <meta property="og:title" content="Bitcoin Roller Coaster Guy" />
+    <meta property="og:title" content="Bitcoin Cash Roller Coaster Guy" />
     <meta property="og:image" content="https://raw.githubusercontent.com/rollercoasterguy/rollercoasterguy.github.io/master/images/page_thumb.jpg" />
     <meta property="og:type" content="website" />
 
-    <title>Bitcoin Roller Coaster Guy</title>
+    <title>Bitcoin Cash Roller Coaster Guy</title>
     <link rel="icon" href="images/favicon.png">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Open+Sans">
