Change bitcoin logo to bitcoin cash logo

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                 <div class="col-sm-4">
                     <h2 id='footer-header'> The Roller Coaster Guy </h2>
                     <div class="col-sm" style="padding: 0 0 0 0px">
-                        <img src="images/bitcoin_logo.png" style="width: 150px">
+                        <img src="images/bitcoin_cash_logo.png" style="width: 160px; margin-bottom: 15px;">
                     </div>
                     <div class="col-sm" style="padding: 0 0 0 0px">
                         <iframe data-aa='734299' src='//ad.a-ads.com/734299?size=120x60' scrolling='no' style='width:120px; height:60px; border:0px; padding:0;overflow:hidden' allowtransparency='true'></iframe>
